--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,7 @@ data/seed_data.jsonl
 data/unlabelled_data.jsonl
 data/evol_instruct_70k.json
 experiments/lora/output/*
+experiments/lora/wandb/
 experiments/instruction_visualization/*.json
 experiments/instruction_visualization/*.html
+experiments/alpaca_farm/generates/
