feat: add 'score_only' option in selectors

--- a/configs/selectors.yaml
+++ b/configs/selectors.yaml
@@ -1,22 +1,22 @@
 selector:
-  source_file_path: /zjunlp/oyx/EasyInstruct/data/seed_tasks.jsonl
+  source_file_path: /zjunlp/oyx/EasyInstruct/data/alpaca_data_5k.jsonl
   target_dir: data/selections/
-  target_file_name: selected_tasks.jsonl
+  target_file_name: case.jsonl
+  Deduplicator:
   LengthSelector:
     min_instruction_length: 3
     max_instruction_length: 150
-    min_response_length: 3
+    min_response_length: 1
     max_response_length: 350
-  Deduplicator:
   RougeSelector:
     threshold: 0.7
   GPTScoreSelector:
     engine: gpt-3.5-turbo
     threshold: 4
   MTLDSelector:
-    lower_threshold: 20
-    upper_threshold: 150
-    ttr_standard: 0.72
+    ttr_threshold: 0.72
+    min_mtld: 8
+    max_mtld: 22
   PPLSelector:
     threshold: 200
     model_name: gpt2
